--- a/source/_static/custom.css
+++ b/source/_static/custom.css
@@ -65,3 +65,9 @@ div.rst-content table.docutils caption {
 .sd-octicon {
     vertical-align: -0.125em;
 }
+
+#verze-a-zmeny .ticket {
+    color: gray;
+    font-size: 85%;
+    margin-left: .5em;
+}
